--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -13,6 +13,13 @@
 }
 
 .btn-info{
-    display: flex;
+   margin-top: 30px;
     
+}
+
+.btn-style{
+    border: none;
+    padding: 15px;
+    border-radius: 20px;
+    background-color: violet;
 }
