--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,8 +1,14 @@
 .cart-img img{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 }
 .cart-img{
     display: flex;
     align-items: center;
+    
+
+}
+.item-text{
+    margin-left: 10px;
 }
