--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -29,9 +29,17 @@
 }
 
 @media only screen and (max-width: 688px){
+    .shop-container{
+        display: flex;
+        flex-direction: column-reverse;
+
+    }
     .products-container{
         grid-template-columns: repeat(1, 1fr);
+        margin-left: 0;
+        margin: 0 auto;
     }
+
 }
     
 
